--- a/view/grid-3d-mapping-visualization.html
+++ b/view/grid-3d-mapping-visualization.html
@@ -21,7 +21,7 @@
   <script src="../js/lib/THREEx.FullScreen.js"></script>
   <script src="../js/lib/THREEx.WindowResize.js"></script>
   <script src="../data/busan_crime_grid.js"></script>
-  <script src="../js/script/map.js"></script>
+  <script src="../js/script/script.js"></script>
   <!-- scripts end -->
 </head>
 <body>
